# suno-easy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: README.md  api-coverage.md  client.md  enums.md  errors.md  getting-started.md  models.md  tasks-and-polling.md  webhooks.md
docs/resources/: account.md  audio.md  lyrics.md  music.md  persona.md  upload.md  video.md  voice.md
examples/: README.md  _common.py  account.py  audio_boost_style.py  audio_wav.py  lyrics.py  music.py  quickstart.py  upload.py  video.py  voice.py  webhooks.py
suno_easy/: __init__.py  audio.py  client.py  exceptions.py  lyrics.py  models.py  music.py  persona.py  tasks.py  utils.py
suno_easy/_core/: __init__.py  constants.py  payload.py  submit.py  tasks.py  types.py
suno_easy/models/: __init__.py  account.py  lyrics.py  media.py  music.py  persona.py  processing.py  style.py  upload.py  voice.py
suno_easy/resources/: __init__.py  account.py  audio.py  lyrics.py  music.py  persona.py  upload.py  video.py  voice.py
suno_easy/webhooks/: __init__.py  events.py  parsers.py
tests/: test_client.py
tests/test_core/: test_tasks.py
tests/test_models/: test_phase2_models.py  test_song.py  test_upload.py  test_voice.py
tests/test_resources/: test_audio.py  test_music.py  test_persona.py  test_upload.py  test_video.py  test_voice.py
tests/test_webhooks/: test_parsers.py
