[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suno-easy"
version = "0.2.0"
description = "A lightweight, modern, and fully-typed Python SDK for the Suno AI API (sunoapi.org)"
readme = "README.md"
authors = [
    { name = "Fred", email = "frederic.dymko@gmail.com" }
]
license = "MIT"
keywords = ["suno", "ai", "music", "api", "sdk", "audio", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Onnonoka/suno-easy"
Documentation = "https://github.com/Onnonoka/suno-easy#readme"
Repository = "https://github.com/Onnonoka/suno-easy.git"
Issues = "https://github.com/Onnonoka/suno-easy/issues"

[tool.setuptools.package-data]
suno_easy = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["suno_easy*"]
